--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div id="app">
+      <div id="temperature-card-container"></div>
+    </div>
+  <script type="module" src="/main.js"></script>
   </body>
 </html>
