create table component and connect it to the store

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <div id="temperature-card-container"></div>
+      <div id="temperature-table-container"></div>
     </div>
   <script type="module" src="/main.js"></script>
   </body>
