--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <div id="temperature-card-container"></div>
+      <div id="temperature-card-container">Loading...</div>
       <div id="temperature-table-container"></div>
     </div>
   <script type="module" src="/main.js"></script>
