--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div id="app">
       <div id="temperature-card-container">Loading...</div>
       <div id="temperature-table-container"></div>
+      <div>
+        <div id="temperature-card-container"></div>
+      </div>
+      <div>
+        <div id="temperature-table-container"></div>
+      </div>
     </div>
   <script type="module" src="/main.js"></script>
   </body>
