--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div id="app">
-      <div id="temperature-card-container">Loading...</div>
-      <div id="temperature-table-container"></div>
       <div>
         <div id="temperature-card-container"></div>
+        <div id="chart-container"></div>
       </div>
       <div>
         <div id="temperature-table-container"></div>
       </div>
     </div>
-  <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
