switch from one column to two column layout

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <div>
+      <div class="left-panel">
         <div id="temperature-card-container"></div>
         <div id="chart-container"></div>
       </div>
-      <div>
+      <div class="right-panel">
         <div id="temperature-table-container"></div>
       </div>
     </div>
