add initial loading message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app">
       <div class="left-panel">
-        <div id="temperature-card-container"></div>
+        <div id="temperature-card-container">Loading...</div>
         <div id="chart-container"></div>
       </div>
       <div class="right-panel">
